--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         con eficiencia y eficacia.</P>
 
                     <a target="_blank"
-                        href="https://drive.google.com/file/d/129Y1eEgOjdqOsYA3jl_9fhZnmeDbGLjy/view?usp=sharing">
+                        href="https://drive.google.com/file/d/18gLGt-nk-pLeh0xD1dKE4mR-_SRU7GFM/view?usp=drive_link">
                         <button id="btn">Descargar CV</button>
                     </a>
                 </div>
